--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@orpc/client": "^1.7.10",
     "@orpc/server": "^1.7.10",
-    "zod": "^4.0.15",
-    "zod-prisma-types": "^3.2.4"
+    "prisma-zod-generator": "^1.2.0",
+    "zod": "^4.0.15"
   }
 }
